--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".PolicyActivity"></activity>
+        <activity android:name=".Guidlines_adapter"></activity>
+        <activity android:name=".Guidlines_model" />
+        <activity android:name=".PolicyActivity" />
         <activity android:name=".CitySelectionActivity" />
         <activity
             android:name=".SplashActivity"
