--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,9 +11,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".CarBooking"></activity>
-        <activity android:name=".Signup"></activity>
-        <activity android:name=".Login"></activity>
+        <activity android:name=".PaymentPage"></activity>
+        <activity android:name=".CarBooking" />
+        <activity android:name=".Signup" />
+        <activity android:name=".Login" />
         <activity android:name=".Guidlines_adapter" />
         <activity android:name=".Guidlines_model" />
         <activity android:name=".PolicyActivity" />
