--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,7 @@ android {
 dependencies {
 
     implementation 'com.razorpay:checkout:1.5.16'
+    implementation 'com.github.barteksc:android-pdf-viewer:2.8.2'
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.1.0'
