--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,9 +20,11 @@ android {
 }
 
 dependencies {
+    implementation("com.squareup.okhttp3:okhttp:4.9.0")
 
     implementation 'com.razorpay:checkout:1.5.16'
     implementation 'com.github.barteksc:android-pdf-viewer:2.8.2'
+    implementation 'com.android.volley:volley:1.1.1'
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.1.0'
